; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_acl_nfs4.c_acl_nfs4_trivial_from_mode_libc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_acl_nfs4.c_acl_nfs4_trivial_from_mode_libc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acl = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @acl_nfs4_trivial_from_mode_libc(%struct.acl* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.acl*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.acl* %0, %struct.acl** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.acl*, %struct.acl** %4, align 8
  %8 = getelementptr inbounds %struct.acl, %struct.acl* %7, i32 0, i32 0
  store i64 0, i64* %8, align 8
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load %struct.acl*, %struct.acl** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @acl_nfs4_sync_acl_from_mode_draft(%struct.acl* %12, i32 %13, i32 -1)
  br label %19

15:                                               ; preds = %3
  %16 = load %struct.acl*, %struct.acl** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @acl_nfs4_trivial_from_mode(%struct.acl* %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %11
  ret void
}

declare dso_local i32 @acl_nfs4_sync_acl_from_mode_draft(%struct.acl*, i32, i32) #1

declare dso_local i32 @acl_nfs4_trivial_from_mode(%struct.acl*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
